--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,6 +10,8 @@
 
 .main {
   padding: 5rem 0;
+  width: 100%;
+  height: 100%;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -21,9 +23,30 @@
   width: 100%;
   height: 100px;
   border-bottom: 1px solid #eaeaea;
+  padding-left: 5rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+}
+
+.header h1 {
+  margin: 0;
+  line-height: 1.15;
+  text-align: center;
+  font-size: 3rem;
+}
+
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
 .footer {
@@ -35,11 +58,17 @@
   align-items: center;
 }
 
-.footer a {
+.footer div {
   display: flex;
-  justify-content: center;
   align-items: center;
-  flex-grow: 1;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 800px;
+  margin-top: 3rem;
+}
+
+.footer div p{
+ text-align: center;
 }
 
 .title a {
@@ -126,5 +155,10 @@
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+
+  .header {
+    padding-left: 0rem;
+    justify-content: center;
   }
 }
